force-app/main/default/objects/EventSphere_Venue__c/EventSphere_Venue__c.object-meta.xml
<CustomObject>
    <label>EventSphere Venue</label>
    <nameField>
        <label>EventSphere Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventSphere Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>