force-app/main/default/objects/EventSphere_Venue__c/fields/Indoor_Venue__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indoor Venue</label>
    <type>Checkbox</type>
</CustomField>