force-app/main/default/objects/EventSphere_Venue__c/fields/Parking_Available__c.field-meta.xml
<CustomField>
    <fullName>Parking_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parking Available</label>
    <type>Checkbox</type>
</CustomField>