force-app/main/default/objects/EventSphere_Venue__c/fields/Venue_Code__c.field-meta.xml
<CustomField>
    <fullName>Venue_Code__c</fullName>
    <label>Venue Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>