force-app/main/default/objects/EventSphere_Venue__c/fields/Venue_Description__c.field-meta.xml
<CustomField>
    <fullName>Venue_Description__c</fullName>
    <label>Venue Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>