force-app/main/default/objects/EventSphere_Venue__c/fields/Venue_Type__c.field-meta.xml
<CustomField>
    <fullName>Venue_Type__c</fullName>
    <label>Venue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convention Center</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Auditorium</fullName>
            </value>
            <value>
                <fullName>Stadium</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Resort</fullName>
            </value>
            <value>
                <fullName>Corporate Campus</fullName>
            </value>
            <value>
                <fullName>Exhibition Hall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>